susin new update 7

--- a/about-industrial-actuators.html
+++ b/about-industrial-actuators.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#c41e3a">
+    <meta name="msapplication-TileColor" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
     <title>About Susin Group — Industrial Actuators & Gearboxes</title>
     <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide since 1992. ✓ ISO 9001:2015 Certified ✓ 32+ Years Experience ✓ Global Presence in India, UAE & Qatar">
     <meta name="keywords" content="about us, industrial actuators, gearboxes, motion control, manufacturer, company history, mission values, ISO 9001 certification, valve automation, actuator supplier, pneumatic actuators, hydraulic actuators">
@@ -25,11 +35,51 @@
 
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Susin Group">
     <meta property="og:title" content="About Susin Group — Industrial Actuators & Gearboxes">
     <meta property="og:description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide.">
     <meta property="og:url" content="https://www.susingroup.com/about-industrial-actuators.html">
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="About Susin Group">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@susingroup">
+    <meta name="twitter:creator" content="@susingroup">
+    <meta name="twitter:title" content="About Susin Group — Industrial Actuators">
+    <meta name="twitter:description" content="Manufacturer since 1992. ✓ ISO 9001 Certified ✓ Global Presence">
+    <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta name="twitter:image:alt" content="About Susin Group">
+
+    <!-- Breadcrumb Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.susingroup.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "About",
+          "item": "https://www.susingroup.com/about.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Industrial Actuators",
+          "item": "https://www.susingroup.com/about-industrial-actuators.html"
+        }
+      ]
+    }
+    </script>
 
     <!-- Structured data -->
     <script type="application/ld+json">
