--- a/about.html
+++ b/about.html
@@ -46,7 +46,40 @@
         <meta property="og:description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide.">
         <meta property="og:url" content="https://www.susingroup.com/about.html">
         <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <meta property="og:image:alt" content="Susin Group - 32+ Years of Excellence">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:locale:alternate" content="en_GB">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
+        <meta name="twitter:title" content="About Susin Group | 32+ Years Excellence">
+        <meta name="twitter:description" content="Leading industrial actuator manufacturer since 1992. ✓ ISO 9001 Certified ✓ Global Presence">
+        <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta name="twitter:image:alt" content="Susin Group - 32+ Years of Excellence">
+
+        <!-- Breadcrumb Structured Data -->
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.susingroup.com/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "About",
+              "item": "https://www.susingroup.com/about.html"
+            }
+          ]
+        }
+        </script>
 
         <!-- Structured data -->
         <script type="application/ld+json">
