--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=yes">
+    <meta name="theme-color" content="#c41e3a">
+    <meta name="msapplication-TileColor" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
     <title>Contact Susin Group — Sales, Support & Offices</title>
     <meta name="description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations. India: +91-77080-97242 | UAE | Qatar. ✓ 24/7 Support ✓ Fast Response ✓ Expert Assistance">
     <meta name="keywords" content="contact susin group, actuator quotes, product inquiries, technical support, sales contact, global offices, India office, UAE office, Qatar office, motion control support, valve automation contact, customer service, emergency support, coimbatore office, dubai office, doha office">
@@ -22,16 +32,53 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#c41e3a">
-    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
-    <meta name="robots" content="index, follow">
+    <meta property="og:site_name" content="Susin Group">
     <meta property="og:title" content="Contact Susin Group — Sales, Support & Offices">
     <meta property="og:description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations.">
     <meta property="og:url" content="https://www.susingroup.com/contact-support-sales.html">
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Contact Susin Group">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@susingroup">
+    <meta name="twitter:creator" content="@susingroup">
+    <meta name="twitter:title" content="Contact Susin Group — Sales & Support">
+    <meta name="twitter:description" content="Get quotes & technical support. ✓ 24/7 Support ✓ Global Offices">
+    <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta name="twitter:image:alt" content="Contact Susin Group">
+
+    <!-- Breadcrumb Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.susingroup.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Contact",
+          "item": "https://www.susingroup.com/contact.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Support & Sales",
+          "item": "https://www.susingroup.com/contact-support-sales.html"
+        }
+      ]
+    }
+    </script>
 
     <script type="application/ld+json">
     {
