--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,40 @@
         <meta property="og:description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations.">
         <meta property="og:url" content="https://www.susingroup.com/contact.html">
         <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <meta property="og:image:alt" content="Contact Susin Group - Global Offices">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:locale:alternate" content="en_GB">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
+        <meta name="twitter:title" content="Contact Susin Group | Get Quote & Technical Support">
+        <meta name="twitter:description" content="Contact us for quotes & support. ✓ 24/7 Technical Assistance ✓ Global Offices">
+        <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta name="twitter:image:alt" content="Contact Susin Group - Global Offices">
+
+        <!-- Breadcrumb Structured Data -->
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.susingroup.com/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Contact",
+              "item": "https://www.susingroup.com/contact.html"
+            }
+          ]
+        }
+        </script>
 
         <!-- Structured data -->
         <script type="application/ld+json">
