--- a/products.html
+++ b/products.html
@@ -36,13 +36,44 @@
         <!-- Open Graph / Twitter -->
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Susin Group">
-        <meta name="twitter:site" content="@susingroup">
-        <meta name="twitter:creator" content="@susingroup">
         <meta property="og:title" content="Products | Industrial Actuators & Gearboxes">
         <meta property="og:description" content="Product portfolio: Pneumatic, Gearboxes, Electro-Hydraulic and Electrical Actuators for industrial automation.">
         <meta property="og:url" content="https://www.susingroup.com/products.html">
         <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <meta property="og:image:alt" content="Susin Group Product Range - Actuators & Gearboxes">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:locale:alternate" content="en_GB">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
+        <meta name="twitter:title" content="Industrial Actuators & Gearboxes Products | Susin Group">
+        <meta name="twitter:description" content="Complete range: Pneumatic, Hydraulic & Electrical Actuators. ✓ Custom Solutions ✓ Global Support">
+        <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta name="twitter:image:alt" content="Susin Group Product Range - Actuators & Gearboxes">
+
+        <!-- Breadcrumb Structured Data -->
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.susingroup.com/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://www.susingroup.com/products.html"
+            }
+          ]
+        }
+        </script>
 
         <!-- Structured data -->
         <script type="application/ld+json">
