--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
     <meta name="HandheldFriendly" content="true">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,11 +30,51 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Susin Group">
     <meta property="og:title" content="Resources — Datasheets, Manuals & Sizing Tools">
     <meta property="og:description" content="Datasheets, manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions.">
     <meta property="og:url" content="https://www.susingroup.com/resources-technical-docs.html">
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Susin Group Technical Resources">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@susingroup">
+    <meta name="twitter:creator" content="@susingroup">
+    <meta name="twitter:title" content="Resources — Datasheets & Manuals">
+    <meta name="twitter:description" content="Free downloads & technical resources. ✓ CAD Files ✓ Selection Tools">
+    <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta name="twitter:image:alt" content="Susin Group Technical Resources">
+
+    <!-- Breadcrumb Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.susingroup.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Resources",
+          "item": "https://www.susingroup.com/resources.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Technical Docs",
+          "item": "https://www.susingroup.com/resources-technical-docs.html"
+        }
+      ]
+    }
+    </script>
 
     <script type="application/ld+json">
     {
