--- a/services-installation-maintenance.html
+++ b/services-installation-maintenance.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
     <meta name="HandheldFriendly" content="true">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -34,7 +34,46 @@
     <meta property="og:description" content="Services including installation, commissioning, maintenance, training, customization and spare parts for industrial actuators and gearboxes.">
     <meta property="og:url" content="https://www.susingroup.com/services-installation-maintenance.html">
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Susin Group Services">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@susingroup">
+    <meta name="twitter:creator" content="@susingroup">
+    <meta name="twitter:title" content="Services — Installation, Maintenance & Support">
+    <meta name="twitter:description" content="Expert installation & maintenance. ✓ 24/7 Support ✓ Global Service Network">
+    <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta name="twitter:image:alt" content="Susin Group Services">
+
+    <!-- Breadcrumb Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.susingroup.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Services",
+          "item": "https://www.susingroup.com/services.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Installation & Maintenance",
+          "item": "https://www.susingroup.com/services-installation-maintenance.html"
+        }
+      ]
+    }
+    </script>
 
     <script type="application/ld+json">
     {
