--- a/careers.html
+++ b/careers.html
@@ -22,11 +22,22 @@
     <meta name="geo.region" content="IN-TN">
     <link rel="canonical" href="https://www.susingroup.com/careers.html">
     <meta property="og:title" content="Career Opportunities at Susin Group | 10+ Open Positions">
+    <meta property="og:type" content="website">
     <meta property="og:description" content="Join our 32-year legacy in valve automation. Global exposure, talent development programs, competitive benefits. Engineering, HR, Quality, Sales roles available.">
     <meta property="og:url" content="https://www.susingroup.com/careers.html">
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Careers at Susin Group - Join Our Team">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@susingroup">
+    <meta name="twitter:creator" content="@susingroup">
+    <meta name="twitter:title" content="Careers at Susin Group | 10+ Open Positions">
+    <meta name="twitter:description" content="Join our 32-year legacy. ✓ Global Exposure ✓ Talent Development Programs">
+    <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+    <meta name="twitter:image:alt" content="Careers at Susin Group - Join Our Team">
     <!-- Performance hints -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,6 +47,28 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- Breadcrumb Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.susingroup.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Careers",
+          "item": "https://www.susingroup.com/careers.html"
+        }
+      ]
+    }
+    </script>
+
         <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
