--- a/industries.html
+++ b/industries.html
@@ -35,13 +35,44 @@
         <!-- Open Graph / Twitter -->
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Susin Group">
-        <meta name="twitter:site" content="@susingroup">
-        <meta name="twitter:creator" content="@susingroup">
         <meta property="og:title" content="Industries | Industrial Actuators & Gearboxes">
         <meta property="og:description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
         <meta property="og:url" content="https://www.susingroup.com/industries.html">
         <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <meta property="og:image:alt" content="Susin Group Industries - Oil & Gas, Power, Water">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:locale:alternate" content="en_GB">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
+        <meta name="twitter:title" content="Industries Served | Oil & Gas, Power, Chemical | Susin Group">
+        <meta name="twitter:description" content="Industry-specific actuator solutions. ✓ Proven Track Record ✓ Global Projects">
+        <meta name="twitter:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta name="twitter:image:alt" content="Susin Group Industries - Oil & Gas, Power, Water">
+
+        <!-- Breadcrumb Structured Data -->
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.susingroup.com/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Industries",
+              "item": "https://www.susingroup.com/industries.html"
+            }
+          ]
+        }
+        </script>
 
         <!-- Structured data -->
         <script type="application/ld+json">
