--- a/index.html
+++ b/index.html
@@ -583,6 +583,145 @@
     
         <main id="main-content">
 
+        <!-- Video Flash Slider Section -->
+        <section class="video-flash-slider" aria-label="Valve Industry Highlights">
+            <div class="slider-container">
+                <div class="video-slider-wrapper">
+                    <!-- Slide 1: Ball Valves -->
+                    <div class="video-slide active">
+                        <div class="video-background">
+                            <video autoplay muted loop playsinline class="slide-video">
+                                <source src="https://cdn.coverr.co/videos/coverr-rotating-industrial-machinery-5044/1080p.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-overlay"></div>
+                        </div>
+                        <div class="slide-content">
+                            <div class="container">
+                                <span class="slide-label">Ball Valves</span>
+                                <h2 class="slide-title">Quarter-Turn Ball Valve Automation</h2>
+                                <p class="slide-description">Industry-leading pneumatic and electric actuators for ball valves in critical flow control applications. Designed for on/off and modulating service in oil & gas, petrochemical, and power generation industries.</p>
+                                <div class="slide-features">
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> 90° Rotation</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> High Flow Capacity</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Tight Shut-off</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 2: Butterfly Valves -->
+                    <div class="video-slide">
+                        <div class="video-background">
+                            <video autoplay muted loop playsinline class="slide-video">
+                                <source src="https://cdn.coverr.co/videos/coverr-mechanical-gears-in-motion-8309/1080p.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-overlay"></div>
+                        </div>
+                        <div class="slide-content">
+                            <div class="container">
+                                <span class="slide-label">Butterfly Valves</span>
+                                <h2 class="slide-title">Efficient Butterfly Valve Solutions</h2>
+                                <p class="slide-description">Compact quarter-turn actuators optimized for butterfly valves in large diameter pipelines. Perfect for water treatment, HVAC, and industrial process control with excellent throttling characteristics.</p>
+                                <div class="slide-features">
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Space-Saving Design</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Low Operating Torque</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Cost-Effective</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 3: Gate Valves -->
+                    <div class="video-slide">
+                        <div class="video-background">
+                            <video autoplay muted loop playsinline class="slide-video">
+                                <source src="https://cdn.coverr.co/videos/coverr-automated-assembly-line-9712/1080p.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-overlay"></div>
+                        </div>
+                        <div class="slide-content">
+                            <div class="container">
+                                <span class="slide-label">Gate Valves</span>
+                                <h2 class="slide-title">Multi-Turn Gate Valve Actuators</h2>
+                                <p class="slide-description">Robust electric and hydraulic actuators for rising stem gate valves. Engineered for high-pressure applications in upstream oil & gas, refining, and pipeline operations with precise position control.</p>
+                                <div class="slide-features">
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Multi-Turn Operation</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> High Pressure Rating</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Zero Leakage</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 4: Globe Valves -->
+                    <div class="video-slide">
+                        <div class="video-background">
+                            <video autoplay muted loop playsinline class="slide-video">
+                                <source src="https://cdn.coverr.co/videos/coverr-precision-industrial-robotics-8844/1080p.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-overlay"></div>
+                        </div>
+                        <div class="slide-content">
+                            <div class="container">
+                                <span class="slide-label">Globe Valves</span>
+                                <h2 class="slide-title">Precision Globe Valve Control</h2>
+                                <p class="slide-description">Advanced electric actuators with positioners for globe valves requiring accurate flow modulation. Ideal for process control in chemical, pharmaceutical, and power generation with excellent throttling capabilities.</p>
+                                <div class="slide-features">
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Precise Flow Control</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Throttling Service</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> 4-20mA Control</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 5: Check Valves -->
+                    <div class="video-slide">
+                        <div class="video-background">
+                            <video autoplay muted loop playsinline class="slide-video">
+                                <source src="https://cdn.coverr.co/videos/coverr-hydraulic-press-in-action-7721/1080p.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-overlay"></div>
+                        </div>
+                        <div class="slide-content">
+                            <div class="container">
+                                <span class="slide-label">Check Valves & Specialty</span>
+                                <h2 class="slide-title">Automated Check & Specialty Valves</h2>
+                                <p class="slide-description">Specialized actuators for check valves, plug valves, and custom applications. Ensuring backflow prevention and reliable operation in critical safety systems across marine, offshore, and industrial facilities.</p>
+                                <div class="slide-features">
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Backflow Prevention</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Fail-Safe Options</div>
+                                    <div class="feature-badge"><i class="fas fa-check-circle"></i> Custom Engineering</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Slider Navigation -->
+                <div class="slider-nav">
+                    <button class="slider-arrow slider-prev" aria-label="Previous slide">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <div class="slider-dots">
+                        <button class="slider-dot active" aria-label="Go to slide 1" data-slide="0"></button>
+                        <button class="slider-dot" aria-label="Go to slide 2" data-slide="1"></button>
+                        <button class="slider-dot" aria-label="Go to slide 3" data-slide="2"></button>
+                        <button class="slider-dot" aria-label="Go to slide 4" data-slide="3"></button>
+                        <button class="slider-dot" aria-label="Go to slide 5" data-slide="4"></button>
+                    </div>
+                    <button class="slider-arrow slider-next" aria-label="Next slide">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                </div>
+
+                <!-- Slider Progress Bar -->
+                <div class="slider-progress">
+                    <div class="progress-bar"></div>
+                </div>
+            </div>
+        </section>
+
         <!-- Advanced Hero Section -->
         <section class="hero-advanced">
             <div class="container">
